--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -1,9 +1,5 @@
 # Question
-In a code snippet, demonstrate a class with at least one:
-- class property
-- class method
-- instance property
-- instance method
+What is polymorphism? Show an example in a code snippet.
 
 # Answer
 
