--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -1,6 +1,8 @@
 # Question
 In a code snippet, demonstrate inheritance by creating two classes where one is the parent class and one is the child class.
 
+In your code example, create an instance of the child class and reference/invoke a property/method of the parent class.
+
 # Answer
 
 
