updating short responses

--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -1,5 +1,15 @@
 # Question
-What's the difference between an `instance` method and a `class` method?
+Imagine that you have two classes: `Person` and `Teacher`. The `Teacher` class extends the `Person` class. We can create a `Teacher` instance like this:
+
+```js
+const ben = new Teacher('ben', 'computer science');
+```
+
+Which of these expressions will be `true`? Why?
+
+1. `ben instanceof Teacher`
+2. `ben instanceof Person`
+3. `ben isntanceof Object`
 
 # Answer
 
